Fix notes wrap

--- a/src/scss/_text.scss
+++ b/src/scss/_text.scss
@@ -20,6 +20,7 @@
 
 .text-ipa,
 .text-ipa * {
+  flex-direction: row !important;
   font-style: normal;
   line-height: 125%;
   font-family: sans-serif;
